# fb_app_backend

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test_and_lint.yml
config/: db.py  env.py
src/user/application/: user_DTOs.py  user_service.py
src/user/domain/: email_address.py  errors.py  password_encrypter.py  user_enums.py  user_model.py  user_repository.py
src/users/: user_model.py
src/users/user_enums/: user_privileges.py  user_status.py
tests/test_user_domain/: test_email_address.py  test_user.py
