[tool.poetry]
name = "fb-app-backend"
version = "0.1.0"
description = ""
authors = ["Lucas Giordano <lucogiordano@gmail.com>"]
readme = "README.md"
packages = [{include = "fb_app_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
