[tool.poetry]
name = "fb-app-backend"
version = "0.1.0"
description = ""
authors = ["Lucas Giordano <lucogiordano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"
email-validator = "^2.0.0.post2"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
parameterized = "^0.9.0"
coverage = "^7.2.7"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
